--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=zuul gateway 
 server.port=8011
 eureka.client.serviceUrl.defaultZone = http://localhost:8010/eureka
+
+
+management.endpoints.web.exposure.include=beans,health,routes,httptrace
+#api.zuul.actuator.url.path=/actuator/*
+#api.user.url.path=/api/user/**
+
+#api.users.actuator.url.path=/users-ws/actator/*
